Fixed an incorrectly labeled tag and added zebra stripes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <div>
     <table>
       <thead>JavaScript Variables Worksheet</thead>
-      <tr class="header-row">
-        <td>Snippet</td>
-        <td>Expression</td>
-        <td>Answer</td>
-        <td>Explanation</td>
+      <tr>
+        <th>Snippet</th>
+        <th>Expression</th>
+        <th>Answer</th>
+        <th>Explanation</th>
       </tr>
       <tr>
         <td>1</td>
