Fixed a datapoint in the site content

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <br>
             isBlue</td>
         <td>true</td>
-        <td>Double bang is not a possible equality expression</td>
+        <td>Double bang makes the variable isBlue false and then true. Not extremely useful.</td>
       </tr>
       <tr>
         <td>20</td>
