Final touches on the HTML content

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <br>
             numberOfGoats + numberOfSheep++</td>
         <td>19</td>
-        <td>The arithmetic of the values inside the variables occurs before the "++" increment expression can be evaluated</td>
+        <td>The evaluation of the values inside the variables occurs before the "++" increment expression can be stored and used</td>
       </tr>
       <tr>
         <td>23</td>
